# BrcikGame

./: README.md
src/: Makefile
src/brick_game/: brick_game.h  main.cpp
src/brick_game/snake/: consoleView.cpp  consoleView.h  snakeController.cpp  snakeController.h  snakeModel.cpp  snakeModel.h
src/brick_game/tetris/: CMakeLists.txt  backend.c  backend.h
src/gui/cli/: frontend.c  frontend.h
src/gui/desktop/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/tests/: snakeTest.cpp
